wildfly-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-svc
  labels:
    app: wildfly
    namespace: ubuntu-test
spec:
  selector:
    app: wildfly
    tier: backend
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: admin
    protocol: TCP
    port: 9990
    targetPort: 9990
  type: LoadBalancer
