wildfly-route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wildfly-web
  namespace: ubuntu-test
spec:
  host: wildfly.ubuntu.local
  port:
    targetPort: web
  to:
    kind: Service
    name: wildfly-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: wildfly.ubuntu.local
      routerName: router
      wildcardPolicy: None
